Fixed inline styles issues, and moved everything into styles.css

--- a/css-brochure-form/styles.css
+++ b/css-brochure-form/styles.css
@@ -6,11 +6,13 @@ h3 {
 }
 
 label {
+  margin-left: 5px;
   display: block;
   margin-bottom: 5px;
+  font-weight: 600;
   font-size: 65%;
-  width: 110%;
-  font-weight: bold;
+  width: 100%;
+  font-family: AtlasGrotesk, normal, sans-serif;
 }
 
 input {
@@ -18,6 +20,7 @@ input {
   padding: 10px;
   color: #aaa;
   width: 400px;
+  font-family: 'Brandon Grotesque', normal, sans-serif;
 }
 
 select {
@@ -35,7 +38,6 @@ option {
 }
 
 button {
-  float: right;
   margin-top: 1px;
   font-family: AtlasGrotesk, normal, sans-serif;
   background: red;
@@ -43,10 +45,19 @@ button {
   border: none;
   border-radius: 30px;
   padding: 10px 25px;
-  width: 40%;
   font-weight: bold;
 }
 
 body {
   font-family: 'Brandon Grotesque', normal, sans-serif;
+}
+
+.submit {
+  text-align: right;
+}
+
+div {
+  margin: 0 auto;
+  width: 360px;
+  margin-bottom: 10px;
 }
